fixed header style on mobile view

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -109,11 +109,11 @@ ol.navbar {
 @media (max-width: 768px) {
 
     .header-container{
-        padding: 0 50px;
+        padding: 0 20px;
     }
 
     .logo-label {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     .navbar-container {
@@ -154,8 +154,8 @@ ol.navbar {
         transform: translateY(-100px);
         transition: .6s ease-in-out;
         transition-delay: 200ms;
-        height: 26px;
-        width: 32px;
+        height: 20px;
+        width: 25px;
         top: 17px;
         left: 20px;
         z-index: 2;
@@ -166,7 +166,7 @@ ol.navbar {
 
     .hamburger-lines .line {
         display: block;
-        height: 4px;
+        height: 2px;
         width: 100%;
         border-radius: 10px;
         background: var(--green);
